# blogWriterMCP

./: .env  .gitignore  README.md  app.py  blog.txt  blog1.html  fastAPI.py  frontend.html  hello.py  mcpClient.py  mcpServer.py  newsCrawler.json  pyproject.toml
mcpServerDocker/: client.py  server.py
results/: blog.html
